Seagull.Language/Grammar/SeagullParser.cs
//------------------------------------------------------------------------------
// <auto-generated>
//     This code was generated by a tool.
//     ANTLR Version: 4.7.2
//
//     Changes to this file may cause incorrect behavior and will be lost if
//     the code is regenerated.
// </auto-generated>
//------------------------------------------------------------------------------

// Generated from Grammar/SeagullParser.g4 by ANTLR 4.7.2

// Unreachable code detected
#pragma warning disable 0162
// The variable '...' is assigned but its value is never used
#pragma warning disable 0219
// Missing XML comment for publicly visible type or member '...'
#pragma warning disable 1591
// Ambiguous reference in cref attribute
#pragma warning disable 419



    using System.Collections.Generic;
    
	using Seagull.Language.AST;
	using Seagull.Language.Grammar;
	
	using Seagull.Language.Semantics.Symbols;
	
	using Seagull.Language.AST.Expressions;
	using Seagull.Language.AST.Expressions.Binary;
	using Seagull.Language.AST.Expressions.Literals;
	
	using Seagull.Language.AST.Statements;
	using Seagull.Language.AST.Statements.Definitions;
	using Seagull.Language.AST.Statements.Definitions.Namespaces;
	
	using Seagull.Language.AST.Types;
	using Seagull.Language.AST.Types.Namespaces;

using System;
using System.IO;
using System.Text;
using System.Diagnostics;
using System.Collections.Generic;
using Antlr4.Runtime;
using Antlr4.Runtime.Atn;
using Antlr4.Runtime.Misc;
using Antlr4.Runtime.Tree;
using DFA = Antlr4.Runtime.Dfa.DFA;

[System.CodeDom.Compiler.GeneratedCode("ANTLR", "4.7.2")]
[System.CLSCompliant(false)]
public partial class SeagullParser : Parser {
	protected static DFA[] decisionToDFA;
	protected static PredictionContextCache sharedContextCache = new PredictionContextCache();
	public const int
		SHARP=1, VOID=2, INT=3, CHAR=4, DOUBLE=5, STRING=6, STRUCT=7, LONG=8, 
		BYTE=9, ENUM=10, DELEGATE=11, NULL=12, PTR=13, TRUE=14, FALSE=15, IF=16, 
		ELSE=17, WHILE=18, FOR=19, IN=20, SWITCH=21, CASE=22, BREAK=23, CONTINUE=24, 
		NEW=25, DELETE=26, RETURN=27, PRINT=28, READ=29, ASSERT=30, DELAY=31, 
		PUBLIC=32, PRIVATE=33, LOAD=34, IMPORT=35, NAMESPACE=36, OWNED=37, IS=38, 
		DEFAULT=39, DOT=40, COMMA=41, COL=42, SEMI_COL=43, ASSIGN=44, STAR=45, 
		SLASH=46, PERCENT=47, ARROW=48, QUESTION=49, PLUS=50, MINUS=51, PLUS_PLUS=52, 
		MINUS_MINUS=53, ASSIGN_MUL=54, ASSIGN_DIV=55, ASSIGN_MOD=56, ASSIGN_SUM=57, 
		ASSIGN_SUB=58, NOT=59, AND=60, OR=61, L_BRACKET=62, R_BRACKET=63, L_PAR=64, 
		R_PAR=65, L_CURL=66, R_CURL=67, BIT_AND=68, BIT_OR=69, BIT_XOR=70, BIT_NOT=71, 
		BIT_RIGHT=72, BIT_LEFT=73, EQUAL=74, NOT_EQUAL=75, LESS_THAN=76, GREATER_THAN=77, 
		LESS_EQ_THAN=78, GREATER_EQ_THAN=79, ID=80, INT_CONSTANT=81, REAL_CONSTANT=82, 
		CHAR_CONSTANT=83, STRING_CONSTANT=84, BOOLEAN_CONSTANT=85, SL_COMMENT=86, 
		ML_COMMENT=87, BLANKS=88, DIR_DEFINE=89, DIR_IF=90, DIR_ELIF=91, DIR_ELSE=92, 
		DIR_WHITESPACE=93, DIR_ML_COMMENT=94, DIR_NEWLINE=95;
	public const int
		RULE_program = 0, RULE_load = 1, RULE_imp = 2, RULE_type = 3, RULE_userDefinedType = 4, 
		RULE_namespaceType = 5, RULE_functionType = 6, RULE_parameters = 7, RULE_structType = 8, 
		RULE_enumType = 9, RULE_enumElement = 10, RULE_primitive = 11, RULE_voidType = 12, 
		RULE_protectionLevel = 13, RULE_definition = 14, RULE_namespaceDef = 15, 
		RULE_variableDef = 16, RULE_fuctionDef = 17, RULE_structDef = 18, RULE_enumDef = 19, 
		RULE_delegate = 20, RULE_funcInvocation = 21, RULE_fnBlock = 22, RULE_fnBlockContent = 23, 
		RULE_statement = 24, RULE_readPrint = 25, RULE_expression = 26, RULE_variable = 27, 
		RULE_literal = 28;
	public static readonly string[] ruleNames = {
		"program", "load", "imp", "type", "userDefinedType", "namespaceType", 
		"functionType", "parameters", "structType", "enumType", "enumElement", 
		"primitive", "voidType", "protectionLevel", "definition", "namespaceDef", 
		"variableDef", "fuctionDef", "structDef", "enumDef", "delegate", "funcInvocation", 
		"fnBlock", "fnBlockContent", "statement", "readPrint", "expression", "variable", 
		"literal"
	};

	private static readonly string[] _LiteralNames = {
		null, "'#'", "'void'", "'int'", "'char'", "'double'", "'string'", "'struct'", 
		"'long'", "'byte'", "'enum'", "'delegate'", "'null'", "'ptr'", "'true'", 
		"'false'", null, null, "'while'", "'for'", "'in'", "'switch'", "'case'", 
		"'break'", "'continue'", "'new'", "'delete'", "'return'", "'print'", "'read'", 
		"'assert'", "'delay'", "'public'", "'private'", "'load'", "'import'", 
		"'namespace'", "'owned'", "'is'", "'default'", "'.'", "','", "':'", "';'", 
		"'='", "'*'", "'/'", "'%'", "'->'", "'?'", "'+'", "'-'", "'++'", "'--'", 
		"'*='", "'/='", "'%='", "'+='", "'-='", "'!'", "'&&'", "'||'", "'['", 
		"']'", "'('", "')'", "'{'", "'}'", "'&'", "'|'", "'^'", "'~'", "'>>'", 
		"'<<'", "'=='", "'!='", "'<'", "'>'", "'<='", "'>='", null, null, null, 
		null, null, null, null, null, null, "'define'", null, "'elif'"
	};
	private static readonly string[] _SymbolicNames = {
		null, "SHARP", "VOID", "INT", "CHAR", "DOUBLE", "STRING", "STRUCT", "LONG", 
		"BYTE", "ENUM", "DELEGATE", "NULL", "PTR", "TRUE", "FALSE", "IF", "ELSE", 
		"WHILE", "FOR", "IN", "SWITCH", "CASE", "BREAK", "CONTINUE", "NEW", "DELETE", 
		"RETURN", "PRINT", "READ", "ASSERT", "DELAY", "PUBLIC", "PRIVATE", "LOAD", 
		"IMPORT", "NAMESPACE", "OWNED", "IS", "DEFAULT", "DOT", "COMMA", "COL", 
		"SEMI_COL", "ASSIGN", "STAR", "SLASH", "PERCENT", "ARROW", "QUESTION", 
		"PLUS", "MINUS", "PLUS_PLUS", "MINUS_MINUS", "ASSIGN_MUL", "ASSIGN_DIV", 
		"ASSIGN_MOD", "ASSIGN_SUM", "ASSIGN_SUB", "NOT", "AND", "OR", "L_BRACKET", 
		"R_BRACKET", "L_PAR", "R_PAR", "L_CURL", "R_CURL", "BIT_AND", "BIT_OR", 
		"BIT_XOR", "BIT_NOT", "BIT_RIGHT", "BIT_LEFT", "EQUAL", "NOT_EQUAL", "LESS_THAN", 
		"GREATER_THAN", "LESS_EQ_THAN", "GREATER_EQ_THAN", "ID", "INT_CONSTANT", 
		"REAL_CONSTANT", "CHAR_CONSTANT", "STRING_CONSTANT", "BOOLEAN_CONSTANT", 
		"SL_COMMENT", "ML_COMMENT", "BLANKS", "DIR_DEFINE", "DIR_IF", "DIR_ELIF", 
		"DIR_ELSE", "DIR_WHITESPACE", "DIR_ML_COMMENT", "DIR_NEWLINE"
	};
	public static readonly IVocabulary DefaultVocabulary = new Vocabulary(_LiteralNames, _SymbolicNames);

	[NotNull]
	public override IVocabulary Vocabulary
	{
		get
		{
			return DefaultVocabulary;
		}
	}

	public override string GrammarFileName { get { return "SeagullParser.g4"; } }

	public override string[] RuleNames { get { return ruleNames; } }

	public override string SerializedAtn { get { return new string(_serializedATN); } }

	static SeagullParser() {
		decisionToDFA = new DFA[_ATN.NumberOfDecisions];
		for (int i = 0; i < _ATN.NumberOfDecisions; i++) {
			decisionToDFA[i] = new DFA(_ATN.GetDecisionState(i), i);
		}
	}

		public SeagullParser(ITokenStream input) : this(input, Console.Out, Console.Error) { }

		public SeagullParser(ITokenStream input, TextWriter output, TextWriter errorOutput)
		: base(input, output, errorOutput)
	{
		Interpreter = new ParserATNSimulator(this, _ATN, decisionToDFA, sharedContextCache);
	}

	public partial class ProgramContext : ParserRuleContext {
		public Program Ast;
		public List<string> Loads = new List<string>();
		public List<string> Imports = new List<string>();
		public List<IDefinition> Def = new List<IDefinition>();
		public LoadContext l;
		public ImpContext i;
		public DefinitionContext d;
		public ITerminalNode Eof() { return GetToken(SeagullParser.Eof, 0); }
		public LoadContext[] load() {
			return GetRuleContexts<LoadContext>();
		}
		public LoadContext load(int i) {
			return GetRuleContext<LoadContext>(i);
		}
		public ImpContext[] imp() {
			return GetRuleContexts<ImpContext>();
		}
		public ImpContext imp(int i) {
			return GetRuleContext<ImpContext>(i);
		}
		public DefinitionContext[] definition() {
			return GetRuleContexts<DefinitionContext>();
		}
		public DefinitionContext definition(int i) {
			return GetRuleContext<DefinitionContext>(i);
		}
		public ProtectionLevelContext[] protectionLevel() {
			return GetRuleContexts<ProtectionLevelContext>();
		}
		public ProtectionLevelContext protectionLevel(int i) {
			return GetRuleContext<ProtectionLevelContext>(i);
		}
		public ProgramContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_program; } }
	}

	[RuleVersion(0)]
	public ProgramContext program() {
		ProgramContext _localctx = new ProgramContext(Context, State);
		EnterRule(_localctx, 0, RULE_program);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 63;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			while (_la==LOAD) {
				{
				{
				State = 58; _localctx.l = load();
				 _localctx.Loads.Add(_localctx.l.File); 
				}
				}
				State = 65;
				ErrorHandler.Sync(this);
				_la = TokenStream.LA(1);
			}
			State = 71;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			while (_la==IMPORT) {
				{
				{
				State = 66; _localctx.i = imp();
				 _localctx.Imports.Add(_localctx.i.Namespace); 
				}
				}
				State = 73;
				ErrorHandler.Sync(this);
				_la = TokenStream.LA(1);
			}
			State = 82;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << STRUCT) | (1L << ENUM) | (1L << PUBLIC) | (1L << PRIVATE) | (1L << NAMESPACE))) != 0) || _la==ID) {
				{
				{
				State = 75;
				ErrorHandler.Sync(this);
				_la = TokenStream.LA(1);
				if (_la==PUBLIC || _la==PRIVATE) {
					{
					State = 74; protectionLevel();
					}
				}

				State = 77; _localctx.d = definition();
				 _localctx.Def.AddRange(_localctx.d.Ast); 
				}
				}
				State = 84;
				ErrorHandler.Sync(this);
				_la = TokenStream.LA(1);
			}
			State = 85; Match(Eof);
			 _localctx.Ast =  new Program(0, 0, _localctx.Loads, _localctx.Imports, _localctx.Def); 
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class LoadContext : ParserRuleContext {
		public string File;
		public IToken p;
		public ITerminalNode LOAD() { return GetToken(SeagullParser.LOAD, 0); }
		public ITerminalNode STRING_CONSTANT() { return GetToken(SeagullParser.STRING_CONSTANT, 0); }
		public LoadContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_load; } }
	}

	[RuleVersion(0)]
	public LoadContext load() {
		LoadContext _localctx = new LoadContext(Context, State);
		EnterRule(_localctx, 2, RULE_load);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 88; Match(LOAD);
			State = 89; _localctx.p = Match(STRING_CONSTANT);
			 _localctx.File =  (_localctx.p!=null?_localctx.p.Text:null); 
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class ImpContext : ParserRuleContext {
		public string Namespace;
		public IToken ns1;
		public IToken ns2;
		public ITerminalNode IMPORT() { return GetToken(SeagullParser.IMPORT, 0); }
		public ITerminalNode SEMI_COL() { return GetToken(SeagullParser.SEMI_COL, 0); }
		public ITerminalNode[] ID() { return GetTokens(SeagullParser.ID); }
		public ITerminalNode ID(int i) {
			return GetToken(SeagullParser.ID, i);
		}
		public ITerminalNode[] DOT() { return GetTokens(SeagullParser.DOT); }
		public ITerminalNode DOT(int i) {
			return GetToken(SeagullParser.DOT, i);
		}
		public ImpContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_imp; } }
	}

	[RuleVersion(0)]
	public ImpContext imp() {
		ImpContext _localctx = new ImpContext(Context, State);
		EnterRule(_localctx, 4, RULE_imp);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 92; Match(IMPORT);
			State = 93; _localctx.ns1 = Match(ID);
			 _localctx.Namespace =  _localctx.ns1.GetText(); 
			State = 100;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			while (_la==DOT) {
				{
				{
				State = 95; Match(DOT);
				State = 96; _localctx.ns2 = Match(ID);
				 _localctx.Namespace += "." + _localctx.ns2.GetText(); 
				}
				}
				State = 102;
				ErrorHandler.Sync(this);
				_la = TokenStream.LA(1);
			}
			State = 103; Match(SEMI_COL);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}
